headers/signal_ffi.h

typedef enum {
  SignalLogLevelError = 1,
  SignalLogLevelWarn,
  SignalLogLevelInfo,
  SignalLogLevelDebug,
  SignalLogLevelTrace,
} SignalLogLevel;
/**
 * A wrapper around [`ctr::Ctr32BE`] that uses a smaller nonce and supports an initial counter.
 */
typedef struct SignalAes256Ctr32 SignalAes256Ctr32;
typedef struct SignalAes256GcmDecryption SignalAes256GcmDecryption;
typedef struct SignalAes256GcmEncryption SignalAes256GcmEncryption;
typedef struct SignalAes256GcmSiv SignalAes256GcmSiv;
typedef struct SignalCiphertextMessage SignalCiphertextMessage;
typedef struct SignalDecryptionErrorMessage SignalDecryptionErrorMessage;
typedef struct SignalFingerprint SignalFingerprint;
typedef struct SignalPlaintextContent SignalPlaintextContent;
typedef struct SignalPreKeyBundle SignalPreKeyBundle;
typedef struct SignalPrivateKey SignalPrivateKey;
/**
 * Represents a unique Signal client instance as `(<user ID>, <device ID>)` pair.
 */
typedef struct SignalProtocolAddress SignalProtocolAddress;
typedef struct SignalPublicKey SignalPublicKey;
/**
 * The top-level error type (opaquely) returned to C clients when something goes wrong.
 *
 * Ideally this would use [ThinBox][], and then we wouldn't need an extra level of indirection when
 * returning it to C, but unfortunately that isn't stable yet.
 *
 * [ThinBox]: https://doc.rust-lang.org/std/boxed/struct.ThinBox.html
 */
typedef struct SignalFfiError SignalFfiError;
/**
 * A type alias to be used with [`OwnedBufferOf`], so that `OwnedBufferOf<c_char>` and
 * `OwnedBufferOf<*const c_char>` get distinct names.
 */
typedef const char *SignalCStringPtr;
/**
 * A representation of a array allocated on the Rust heap for use in C code.
 */
typedef struct {
  SignalCStringPtr *base;
  /**
   * The number of elements in the buffer (not necessarily the number of bytes).
   */
  size_t length;
} SignalOwnedBufferOfCStringPtr;
typedef struct {
  /**
   * Telephone number, as an unformatted e164.
   */
  uint64_t e164;
  uint8_t rawAciUuid[16];
  uint8_t rawPniUuid[16];
} SignalFfiCdsiLookupResponseEntry;
/**
 * A representation of a array allocated on the Rust heap for use in C code.
 */
typedef struct {
  SignalFfiCdsiLookupResponseEntry *base;
  /**
   * The number of elements in the buffer (not necessarily the number of bytes).
   */
  size_t length;
} SignalOwnedBufferOfFfiCdsiLookupResponseEntry;
/**
 * A representation of a array allocated on the Rust heap for use in C code.
 */
typedef struct {
  unsigned char *base;
  /**
   * The number of elements in the buffer (not necessarily the number of bytes).
   */
  size_t length;
} SignalOwnedBuffer;
/**
 * A representation of a array allocated on the Rust heap for use in C code.
 */
typedef struct {
  size_t *base;
  /**
   * The number of elements in the buffer (not necessarily the number of bytes).
   */
  size_t length;
} SignalOwnedBufferOfusize;
typedef struct {
  SignalOwnedBuffer bytes;
  SignalOwnedBufferOfusize lengths;
} SignalBytestringArray;
typedef struct {
  SignalProtocolAddress *raw;
} SignalMutPointerProtocolAddress;
typedef SignalBytestringArray SignalStringArray;
typedef struct {
  SignalPrivateKey *raw;
} SignalMutPointerPrivateKey;
typedef struct {
  SignalPublicKey *raw;
} SignalMutPointerPublicKey;
typedef struct {
  const unsigned char *base;
  size_t length;
} SignalBorrowedBuffer;
typedef struct {
  const SignalPublicKey *raw;
} SignalConstPointerPublicKey;
typedef struct {
  void *ctx;
  SignalLoadSession load_session;
  SignalStoreSession store_session;
} SignalSessionStore;
typedef struct {
  const SignalSessionStore *raw;
} SignalConstPointerFfiSessionStoreStruct;
typedef struct {
  void *ctx;
  SignalGetIdentityKeyPair get_identity_key_pair;
  SignalGetLocalRegistrationId get_local_registration_id;
  SignalSaveIdentityKey save_identity;
  SignalGetIdentityKey get_identity;
  SignalIsTrustedIdentity is_trusted_identity;
} SignalIdentityKeyStore;
typedef struct {
  const SignalIdentityKeyStore *raw;
} SignalConstPointerFfiIdentityKeyStoreStruct;
typedef struct {
  void *ctx;
  SignalLoadPreKey load_pre_key;
  SignalStorePreKey store_pre_key;
  SignalRemovePreKey remove_pre_key;
} SignalPreKeyStore;
typedef struct {
  const SignalPreKeyStore *raw;
} SignalConstPointerFfiPreKeyStoreStruct;
typedef struct {
  void *ctx;
  SignalLoadSignedPreKey load_signed_pre_key;
  SignalStoreSignedPreKey store_signed_pre_key;
} SignalSignedPreKeyStore;
typedef struct {
  const SignalSignedPreKeyStore *raw;
} SignalConstPointerFfiSignedPreKeyStoreStruct;
typedef void (*SignalLogCallback)(void *ctx, SignalLogLevel level, const char *file, uint32_t line, const char *message);
typedef void (*SignalLogFlushCallback)(void *ctx);
typedef struct {
  void *ctx;
  SignalLogCallback log;
  SignalLogFlushCallback flush;
} SignalFfiLogger;
typedef struct {
  SignalAes256GcmSiv *raw;
} SignalMutPointerAes256GcmSiv;
typedef struct {
  SignalAes256Ctr32 *raw;
} SignalMutPointerAes256Ctr32;
typedef struct {
  SignalAes256GcmEncryption *raw;
} SignalMutPointerAes256GcmEncryption;
typedef struct {
  SignalAes256GcmDecryption *raw;
} SignalMutPointerAes256GcmDecryption;
typedef struct {
  unsigned char *base;
  size_t length;
} SignalBorrowedMutableBuffer;
typedef struct {
  const SignalAes256GcmSiv *raw;
} SignalConstPointerAes256GcmSiv;
typedef struct {
  SignalCiphertextMessage *raw;
} SignalMutPointerCiphertextMessage;
typedef struct {
  SignalDecryptionErrorMessage *raw;
} SignalMutPointerDecryptionErrorMessage;
typedef struct {
  const SignalDecryptionErrorMessage *raw;
} SignalConstPointerDecryptionErrorMessage;
typedef struct {
  SignalFingerprint *raw;
} SignalMutPointerFingerprint;
typedef struct {
  const SignalFingerprint *raw;
} SignalConstPointerFingerprint;
typedef struct {
  SignalPlaintextContent *raw;
} SignalMutPointerPlaintextContent;
typedef struct {
  const SignalPlaintextContent *raw;
} SignalConstPointerPlaintextContent;
typedef struct {
  SignalPreKeyBundle *raw;
} SignalMutPointerPreKeyBundle;
void signal_print_ptr(const void *p);
void signal_free_string(const char *buf);
void signal_free_buffer(const unsigned char *buf, size_t buf_len);
void signal_free_list_of_strings(SignalOwnedBufferOfCStringPtr buffer);
void signal_free_lookup_response_entry_list(SignalOwnedBufferOfFfiCdsiLookupResponseEntry buffer);
void signal_free_bytestring_array(SignalBytestringArray array);
SignalFfiError *signal_error_get_message(const SignalFfiError *err, const char **out);
SignalFfiError *signal_error_get_address(const SignalFfiError *err, SignalMutPointerProtocolAddress *out);
SignalFfiError *signal_error_get_uuid(const SignalFfiError *err, uint8_t (*out)[16]);
uint32_t signal_error_get_type(const SignalFfiError *err);
SignalFfiError *signal_error_get_retry_after_seconds(const SignalFfiError *err, uint32_t *out);
SignalFfiError *signal_error_get_tries_remaining(const SignalFfiError *err, uint32_t *out);
SignalFfiError *signal_error_get_unknown_fields(const SignalFfiError *err, SignalStringArray *out);
void signal_error_free(SignalFfiError *err);
SignalFfiError *signal_identitykeypair_deserialize(SignalMutPointerPrivateKey *private_key, SignalMutPointerPublicKey *public_key, SignalBorrowedBuffer input);
SignalFfiError *signal_sealed_session_cipher_decrypt(SignalOwnedBuffer *out, const char **sender_e164, const char **sender_uuid, uint32_t *sender_device_id, SignalBorrowedBuffer ctext, SignalConstPointerPublicKey trust_root, uint64_t timestamp, const char *local_e164, const char *local_uuid, unsigned int local_device_id, SignalConstPointerFfiSessionStoreStruct session_store, SignalConstPointerFfiIdentityKeyStoreStruct identity_store, SignalConstPointerFfiPreKeyStoreStruct prekey_store, SignalConstPointerFfiSignedPreKeyStoreStruct signed_prekey_store);
bool signal_init_logger(SignalLogLevel max_level, SignalFfiLogger logger);
SignalFfiError *signal_aes256_gcm_siv_destroy(SignalMutPointerAes256GcmSiv p);
SignalFfiError *signal_aes256_ctr32_destroy(SignalMutPointerAes256Ctr32 p);
SignalFfiError *signal_aes256_gcm_encryption_destroy(SignalMutPointerAes256GcmEncryption p);
SignalFfiError *signal_aes256_gcm_decryption_destroy(SignalMutPointerAes256GcmDecryption p);
SignalFfiError *signal_aes256_ctr32_new(SignalMutPointerAes256Ctr32 *out, SignalBorrowedBuffer key, SignalBorrowedBuffer nonce, uint32_t initial_ctr);
SignalFfiError *signal_aes256_ctr32_process(SignalMutPointerAes256Ctr32 ctr, SignalBorrowedMutableBuffer data, uint32_t offset, uint32_t length);
SignalFfiError *signal_aes256_gcm_encryption_new(SignalMutPointerAes256GcmEncryption *out, SignalBorrowedBuffer key, SignalBorrowedBuffer nonce, SignalBorrowedBuffer associated_data);
SignalFfiError *signal_aes256_gcm_encryption_update(SignalMutPointerAes256GcmEncryption gcm, SignalBorrowedMutableBuffer data, uint32_t offset, uint32_t length);
SignalFfiError *signal_aes256_gcm_encryption_compute_tag(SignalOwnedBuffer *out, SignalMutPointerAes256GcmEncryption gcm);
SignalFfiError *signal_aes256_gcm_decryption_new(SignalMutPointerAes256GcmDecryption *out, SignalBorrowedBuffer key, SignalBorrowedBuffer nonce, SignalBorrowedBuffer associated_data);
SignalFfiError *signal_aes256_gcm_decryption_update(SignalMutPointerAes256GcmDecryption gcm, SignalBorrowedMutableBuffer data, uint32_t offset, uint32_t length);
SignalFfiError *signal_aes256_gcm_decryption_verify_tag(bool *out, SignalMutPointerAes256GcmDecryption gcm, SignalBorrowedBuffer tag);
SignalFfiError *signal_aes256_gcm_siv_new(SignalMutPointerAes256GcmSiv *out, SignalBorrowedBuffer key);
SignalFfiError *signal_aes256_gcm_siv_encrypt(SignalOwnedBuffer *out, SignalConstPointerAes256GcmSiv aes_gcm_siv_obj, SignalBorrowedBuffer ptext, SignalBorrowedBuffer nonce, SignalBorrowedBuffer associated_data);
SignalFfiError *signal_aes256_gcm_siv_decrypt(SignalOwnedBuffer *out, SignalConstPointerAes256GcmSiv aes_gcm_siv, SignalBorrowedBuffer ctext, SignalBorrowedBuffer nonce, SignalBorrowedBuffer associated_data);
SignalFfiError *signal_ciphertext_message_destroy(SignalMutPointerCiphertextMessage p);
SignalFfiError *signal_decryption_error_message_destroy(SignalMutPointerDecryptionErrorMessage p);
SignalFfiError *signal_decryption_error_message_clone(SignalMutPointerDecryptionErrorMessage *new_obj, SignalConstPointerDecryptionErrorMessage obj);
SignalFfiError *signal_fingerprint_destroy(SignalMutPointerFingerprint p);
SignalFfiError *signal_fingerprint_clone(SignalMutPointerFingerprint *new_obj, SignalConstPointerFingerprint obj);
SignalFfiError *signal_plaintext_content_destroy(SignalMutPointerPlaintextContent p);
SignalFfiError *signal_plaintext_content_clone(SignalMutPointerPlaintextContent *new_obj, SignalConstPointerPlaintextContent obj);
SignalFfiError *signal_pre_key_bundle_destroy(SignalMutPointerPreKeyBundle p);