lib/src/bindings/libsignal_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:libsignal/libsignal')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int>()
external int __mb_cur_max;

@ffi.Native<ffi.Pointer<ffi.Char>>()
external ffi.Pointer<ffi.Char> suboptarg;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void signal_print_ptr(ffi.Pointer<ffi.Void> p);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void signal_free_string(ffi.Pointer<ffi.Char> buf);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Size)>()
external void signal_free_buffer(
  ffi.Pointer<ffi.UnsignedChar> buf,
  int buf_len,
);

@ffi.Native<ffi.Void Function(SignalOwnedBufferOfCStringPtr)>()
external void signal_free_list_of_strings(SignalOwnedBufferOfCStringPtr buffer);

@ffi.Native<ffi.Void Function(SignalOwnedBufferOfFfiCdsiLookupResponseEntry)>()
external void signal_free_lookup_response_entry_list(
  SignalOwnedBufferOfFfiCdsiLookupResponseEntry buffer,
);

@ffi.Native<ffi.Void Function(SignalBytestringArray)>()
external void signal_free_bytestring_array(SignalBytestringArray array);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_message(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<SignalMutPointerProtocolAddress>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_address(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<SignalMutPointerProtocolAddress> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_uuid(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<SignalFfiError>)>()
external int signal_error_get_type(ffi.Pointer<SignalFfiError> err);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_retry_after_seconds(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<ffi.Uint32> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_tries_remaining(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<ffi.Uint32> out,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalFfiError>,
    ffi.Pointer<SignalStringArray>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_error_get_unknown_fields(
  ffi.Pointer<SignalFfiError> err,
  ffi.Pointer<SignalStringArray> out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<SignalFfiError>)>()
external void signal_error_free(ffi.Pointer<SignalFfiError> err);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPrivateKey>,
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_identitykeypair_deserialize(
  ffi.Pointer<SignalMutPointerPrivateKey> private_key,
  ffi.Pointer<SignalMutPointerPublicKey> public_key,
  SignalBorrowedBuffer input,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Uint32>,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.UnsignedInt,
    SignalConstPointerFfiSessionStoreStruct,
    SignalConstPointerFfiIdentityKeyStoreStruct,
    SignalConstPointerFfiPreKeyStoreStruct,
    SignalConstPointerFfiSignedPreKeyStoreStruct,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sealed_session_cipher_decrypt(
  ffi.Pointer<SignalOwnedBuffer> out,
  ffi.Pointer<ffi.Pointer<ffi.Char>> sender_e164,
  ffi.Pointer<ffi.Pointer<ffi.Char>> sender_uuid,
  ffi.Pointer<ffi.Uint32> sender_device_id,
  SignalBorrowedBuffer ctext,
  SignalConstPointerPublicKey trust_root,
  int timestamp,
  ffi.Pointer<ffi.Char> local_e164,
  ffi.Pointer<ffi.Char> local_uuid,
  int local_device_id,
  SignalConstPointerFfiSessionStoreStruct session_store,
  SignalConstPointerFfiIdentityKeyStoreStruct identity_store,
  SignalConstPointerFfiPreKeyStoreStruct prekey_store,
  SignalConstPointerFfiSignedPreKeyStoreStruct signed_prekey_store,
);

@ffi.Native<ffi.Bool Function(ffi.UnsignedInt, SignalFfiLogger)>(
  symbol: 'signal_init_logger',
)
external bool _signal_init_logger(int max_level, SignalFfiLogger logger);

bool signal_init_logger(SignalLogLevel max_level, SignalFfiLogger logger) =>
    _signal_init_logger(max_level.value, logger);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerAes256GcmSiv)
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_siv_destroy(
  SignalMutPointerAes256GcmSiv p,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalMutPointerAes256Ctr32)>()
external ffi.Pointer<SignalFfiError> signal_aes256_ctr32_destroy(
  SignalMutPointerAes256Ctr32 p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerAes256GcmEncryption)
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_encryption_destroy(
  SignalMutPointerAes256GcmEncryption p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerAes256GcmDecryption)
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_decryption_destroy(
  SignalMutPointerAes256GcmDecryption p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerAes256Ctr32>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_ctr32_new(
  ffi.Pointer<SignalMutPointerAes256Ctr32> out,
  SignalBorrowedBuffer key,
  SignalBorrowedBuffer nonce,
  int initial_ctr,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerAes256Ctr32,
    SignalBorrowedMutableBuffer,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_ctr32_process(
  SignalMutPointerAes256Ctr32 ctr,
  SignalBorrowedMutableBuffer data,
  int offset,
  int length,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerAes256GcmEncryption>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_encryption_new(
  ffi.Pointer<SignalMutPointerAes256GcmEncryption> out,
  SignalBorrowedBuffer key,
  SignalBorrowedBuffer nonce,
  SignalBorrowedBuffer associated_data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerAes256GcmEncryption,
    SignalBorrowedMutableBuffer,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_encryption_update(
  SignalMutPointerAes256GcmEncryption gcm,
  SignalBorrowedMutableBuffer data,
  int offset,
  int length,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalMutPointerAes256GcmEncryption,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_encryption_compute_tag(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalMutPointerAes256GcmEncryption gcm,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerAes256GcmDecryption>,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_decryption_new(
  ffi.Pointer<SignalMutPointerAes256GcmDecryption> out,
  SignalBorrowedBuffer key,
  SignalBorrowedBuffer nonce,
  SignalBorrowedBuffer associated_data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerAes256GcmDecryption,
    SignalBorrowedMutableBuffer,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_decryption_update(
  SignalMutPointerAes256GcmDecryption gcm,
  SignalBorrowedMutableBuffer data,
  int offset,
  int length,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalMutPointerAes256GcmDecryption,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_decryption_verify_tag(
  ffi.Pointer<ffi.Bool> out,
  SignalMutPointerAes256GcmDecryption gcm,
  SignalBorrowedBuffer tag,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerAes256GcmSiv>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_siv_new(
  ffi.Pointer<SignalMutPointerAes256GcmSiv> out,
  SignalBorrowedBuffer key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerAes256GcmSiv,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_siv_encrypt(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerAes256GcmSiv aes_gcm_siv_obj,
  SignalBorrowedBuffer ptext,
  SignalBorrowedBuffer nonce,
  SignalBorrowedBuffer associated_data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerAes256GcmSiv,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_aes256_gcm_siv_decrypt(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerAes256GcmSiv aes_gcm_siv,
  SignalBorrowedBuffer ctext,
  SignalBorrowedBuffer nonce,
  SignalBorrowedBuffer associated_data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerCiphertextMessage)
>()
external ffi.Pointer<SignalFfiError> signal_ciphertext_message_destroy(
  SignalMutPointerCiphertextMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerDecryptionErrorMessage)
>()
external ffi.Pointer<SignalFfiError> signal_decryption_error_message_destroy(
  SignalMutPointerDecryptionErrorMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerDecryptionErrorMessage>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_decryption_error_message_clone(
  ffi.Pointer<SignalMutPointerDecryptionErrorMessage> new_obj,
  SignalConstPointerDecryptionErrorMessage obj,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalMutPointerFingerprint)>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_destroy(
  SignalMutPointerFingerprint p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerFingerprint>,
    SignalConstPointerFingerprint,
  )
>()
external ffi.Pointer<SignalFfiError> signal_fingerprint_clone(
  ffi.Pointer<SignalMutPointerFingerprint> new_obj,
  SignalConstPointerFingerprint obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerPlaintextContent)
>()
external ffi.Pointer<SignalFfiError> signal_plaintext_content_destroy(
  SignalMutPointerPlaintextContent p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPlaintextContent>,
    SignalConstPointerPlaintextContent,
  )
>()
external ffi.Pointer<SignalFfiError> signal_plaintext_content_clone(
  ffi.Pointer<SignalMutPointerPlaintextContent> new_obj,
  SignalConstPointerPlaintextContent obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerPreKeyBundle)
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_destroy(
  SignalMutPointerPreKeyBundle p,
);
